# WebServices

./: .gitignore  CMakeLists.txt
Include/Manager/: DataBaseManager.h
Include/Servlet/: AddVersionServlet.h  GetInfoServlet.h  GetUpdateServlet.h  ResourceServlet.h  SetUpdateServlet.h  SetVersionServlet.h
Modules/: WebServices.json  WebServices.magic
Source/: Main.cpp
Source/Manager/: DataBaseManager.cpp
Source/Servlet/: AddVersionServlet.cpp  GetInfoServlet.cpp  GetUpdateServlet.cpp  ResourceServlet.cpp  SetUpdateServlet.cpp  SetVersionServlet.cpp
